--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -9,5 +9,6 @@
   "Confirm Password": "Ulangi Kata Sandi",
   "Remember Me": "Ingat saya",
   "Forgot Your Password?": "Lupa sandi?",
+  "You are receiving this email because we received a password reset request for your account.": "Kamu menerima email ini karena kami menerima permintaan perubahan kata sandi di akun Anda.",
   "Article": "Artikel"
 }
